# controller

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: Controller.hpp  FilteredController.hpp  PID.hpp  PIDController.hpp  PPI.hpp  ParallelPIDSettings.hpp  SettingsPID.hpp  SettingsPPI.hpp
python/: __init__.py  python_bindings.cpp  setup.py  usage.py
src/: Controller.cpp  FilteredController.cpp  PID.cpp  PIDController.cpp  PPI.cpp  SettingsPID.cpp  SettingsPPI.cpp
test/: gtest_PID.cpp  test_PID.cpp  test_PID.py
